<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.tivanov.cardocr.SettingsActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageTaken2"
        android:src="@drawable/test_image"
        android:contentDescription="@string/image_taken" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/threshold_method" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spAdaptive"
        android:layout_margin="2dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:text="@string/threshold_type" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spThreshType"
        android:layout_margin="2dp" />



    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="*"
        android:shrinkColumns="*">


        <TableRow>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/thresh"
                android:textSize="12sp"
                android:labelFor="@+id/etThresh"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:text="@string/max_value"
                android:textSize="12sp"
                android:labelFor="@+id/etMaxVal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:text="@string/block_size"
                android:textSize="12sp"
                android:labelFor="@+id/etBlockSize"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:text="@string/c"
                android:textSize="12sp"
                android:labelFor="@+id/etConst"/>

        </TableRow>

        <TableRow>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:id="@id/etThresh"
                android:inputType="number" />


            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@id/etMaxVal"
                android:inputType="number" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="2"
                android:id="@id/etBlockSize"
                android:inputType="numberDecimal" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="3"
                android:id="@id/etConst"
                android:inputType="number" />
        </TableRow>


    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp">
        <View
            android:id="@+id/horizontalDivider"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="4dip"
            android:layout_marginTop="4dip"
            android:background="?android:attr/dividerVertical"
            android:layout_centerHorizontal="true"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnApply"
            android:text="@string/try_text"
            android:layout_toLeftOf="@id/horizontalDivider"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnSave"
            android:text="@string/apply_text"
            android:layout_toEndOf="@id/horizontalDivider"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"/>


    </RelativeLayout>



</LinearLayout>
